# gaiety

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: cli.rs  loader.rs  main.rs  manifest.rs
src/commands/: browse.rs  disable.rs  info.rs  init.rs  install.rs  list.rs  mod.rs  new.rs  path.rs  profile.rs  prune.rs  remove.rs  rename.rs  resolve.rs  rm.rs  sync.rs  update.rs
src/core/: common.rs  file_guard.rs  loader.rs  manifest.rs  mod.rs  parse.rs  types.rs
src/emitter/: zsh.rs
src/loader/: discover.rs  emit.rs  list.rs  mod.rs  types.rs  validate.rs
src/resolver/: graph.rs
src/sources/: local.rs  mod.rs  remote.rs
src/templates/: init.zsh  module.toml  wrapper.lua  wrapper.zsh
src/validator/: commands.rs  mod.rs  semver.rs
