[package]
name = "gaiety"
version = "0.4.0"
edition = "2024"

[dependencies]
anyhow = "*"
clap = { version = "*", features = ["derive", "env"] }
serde = { version = "*", features = ["derive"] }
semver = "*"
toml = "*"
toml_edit = "*"
colored = "*"
shellexpand = "*"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
