[package]
name = "gaiety"
version = "0.5.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.4.18", features = ["derive", "env"] }
serde = { version = "1.0.228", features = ["derive"] }
semver = "1.0.28"
toml = "0.8.23"
toml_edit = "0.22.27"
colored = "3.1.1"
shellexpand = "3.1.2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
